DFG JIT 32_64 - Fix ByteArray speculation https://bugs.webkit.org/show_bug.cgi?id=70571

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-20
Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::ValueSource::forPrediction):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/86771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98063 268f45cc-cd09-0410-ab3c-d52691b4dbfc